--- a/src/main/resources/templates/jobListingList.html
+++ b/src/main/resources/templates/jobListingList.html
@@ -1,37 +1,43 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{fragments/main_layout}"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity">
 <head>
     <meta charset="UTF-8">
-
+    <title>Title</title>
 </head>
 <body>
-<h1 class="h3 mb-2 text-gray-800">Ürünler</h1>
-<div class="row">
+<div layout:fragment="content">
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <h1>İş İlanları</h1>
+    </div>
     <div class="col-lg-12">
         <table class="table table-striped">
             <thead>
             <tr>
                 <th scope="col">#</th>
-                <th scope="col">Ürün Adı</th>
-                <th scope="col">Kategori</th>
-                <th scope="col">Açıklama</th>
-                <th scope="col">Kalan</th>
-                <th scope="col">İşlem</th>
+                <th scope="col">İlan Başlığı</th>
+                <th scope="col">Alınacak Kişi Sayısı</th>
+                <th scope="col">Son Başvuru Tarihi</th>
+                <th scope="col">Detay</th>
             </tr>
             </thead>
             <tbody>
             <tr th:each="job : ${jobs.content}">
                 <td><p th:text="${job.id}"> Id </p></td>
                 <td><p th:text="${job.title}"> Title </p></td>
-                <td><p th:text="${job.description}"> Description </p></td>
                 <td><p th:text="${job.numberofHire}"> Number Of Hire </p></td>
                 <td><p th:text="${job.lastApplicationDate}"> Last Application Date </p></td>
                 <td>
-                    <form th:action="@{/deletejob/{jobId}(jobId=${job.id})}" th:method="post">
+                    <a th:href="@{/job/detail/{id} (id = ${job.id})}" th:text="Detaylar" class="btn btn-primary"></a>
+                    <th:block sec:authorize="hasRole('ROLE_HR')">
+                    <form th:action="@{/hr/job/delete/{jobId}(jobId=${job.id})}" th:method="post">
                         <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
                         <input type="hidden" name="_method" value="post"/>
                         <button type="submit" class="btn btn-danger">X</button>
                     </form>
+                    </th:block>
                 </td>
             </tr>
             </tbody>
