--- a/src/main/resources/templates/jobListingList.html
+++ b/src/main/resources/templates/jobListingList.html
@@ -5,14 +5,14 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>İş İlanları</title>
 </head>
 <body>
 <div layout:fragment="content">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h1>İş İlanları</h1>
     </div>
-    <div class="col-lg-12">
+    <div class="col-md-12 p-3" style="background-color: #ffffff;border-radius: 5px;border:1px solid #dddddd">
         <table class="table table-striped">
             <thead>
             <tr>
