--- a/src/main/resources/templates/HR/Applicants/detail.html
+++ b/src/main/resources/templates/HR/Applicants/detail.html
@@ -11,7 +11,7 @@
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h1 th:text="${applicant.name}"></h1>
         <div class="col-md-3 float-right">
-            <a th:href="@{/uploads/{resume} (resume = ${applicant.resumeLink})}">CV Görüntüle</a>
+            <a target="_blank" th:href="@{/uploads/{resume} (resume = ${applicant.resumeLink})}">CV Görüntüle</a>
         </div>
     </div>
 
