--- a/src/main/resources/templates/jobListingDetail.html
+++ b/src/main/resources/templates/jobListingDetail.html
@@ -63,7 +63,7 @@
                     <label class="custom-file-label" for="customFile">CV</label>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary btn-block">Submit</button>
+            <button type="submit" class="btn btn-primary btn-block">Gönder</button>
         </form>
     </div>
 </div>
