Changed header template

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,15 +6,39 @@
     <title>Title</title>
 </head>
 <body>
-<nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow" th:fragment="header">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">HRApplication</a>
-    <ul class="navbar-nav px-3" sec:authorize="isAuthenticated()">
-        <li class="nav-item text-nowrap">
+<header>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="#">HRApplication</a>
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse" id="navbarCollapse" style="">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/joblist}">
+                        İş İlanları
+                    </a>
+                </li>
+                <th:block sec:authorize="isAuthenticated()">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/hr/job/create}">
+                        Yeni İlan Ekle
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/hr/applicant/list}">
+                        Başvuranlar Listesi
+                    </a>
+                </li>
+                </th:block>
+            </ul>
+            <th:block sec:authorize="isAuthenticated()">
             <form th:action="@{/logout}" method="POST">
                 <button type="submit" class="btn btn-secondary">Çıkış Yap</button>
             </form>
-        </li>
-    </ul>
-</nav>
+            </th:block>
+        </div>
+    </nav>
+</header>
 </body>
 </html>
