--- a/src/main/resources/templates/fragments/main_layout.html
+++ b/src/main/resources/templates/fragments/main_layout.html
@@ -13,11 +13,10 @@
 </head>
 <body>
 <nav th:replace="fragments/header::header"></nav>
-<div class="container-fluid">
+<div class="container">
     <div class="row">
-        <nav th:replace="fragments/sidebar::sidebar"></nav>
 
-        <div role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4" layout:fragment="content"></div>
+        <div role="main" class="col-md-12 ml-sm-auto mt-5 col-lg-12 px-4" layout:fragment="content"></div>
     </div>
 </div>
 </body>
