--- a/src/main/resources/templates/error-500.html
+++ b/src/main/resources/templates/error-500.html
@@ -15,7 +15,7 @@
                 <h1>Oops!</h1>
                 <h2>Sorun Sende Değil Bende :(</h2>
                 <div>
-                    <a href="/joblist">Anasayfaya Gidelim!</a>
+                    <a href="/">Anasayfaya Gidelim!</a>
                 </div>
             </div>
         </div>
