--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -15,7 +15,7 @@
                 <h1>Oops!</h1>
                 <h2>Yanlış Giden Şeyler Var</h2>
                 <div>
-                    <a class="btn btn-primary" href="/joblist">Anasayfaya Gidelim!</a>
+                    <a class="btn btn-primary" href="/">Anasayfaya Gidelim!</a>
                 </div>
             </div>
         </div>
