--- a/src/main/resources/templates/jobListingDetail.html
+++ b/src/main/resources/templates/jobListingDetail.html
@@ -13,7 +13,7 @@
         <h1 th:text="${job.title}"></h1>
         <div class="col-md-3 float-right">
             <th:block sec:authorize="hasRole('ROLE_HR')">
-                <form th:action="@{/deletejob/{jobId}(jobId=${job.id})}" th:method="post">
+                <form th:action="@{/hr/joblisting/delete/{jobId}(jobId=${job.id})}" th:method="post">
                     <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
                     <input type="hidden" name="_method" value="post"/>
                     <button type="submit" class="btn btn-danger float-right">İlanı Kaldır</button>
